--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,12 @@
 <!-- start custom head snippets -->
-
+    <meta name="description" content="Web Designer and Developer with focus in Web &amp; UI design.">
+    <meta name="keywords" content="Web Designer, Graphic Designer, UI Designer, Blog">
+    <meta name="author" content="Nolan Clark">
+    <meta property="og:title" content="Nolan Clark | Web Designer &amp; Developer">
+    <meta property="og:url" content="http://nolanclark.co">
+    <meta property="og:description" content="Web Designer and Developer with focus in Web &amp; UI design.">    
+    <title>Nolan Clark | UI / Web Designer &amp; Developer</title>
+    <link href="http://nolanclark.co/images/favicon.ico" type="image/x-icon" rel="shortcut icon">
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
